Fix random scrollbar issue

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -66,7 +66,11 @@ a:link {
 .thumb {
   width: 200px;
   height: 200px;
-  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.thumb::-webkit-scrollbar {
+  display: none;
 }
 
 @media only screen and (max-width : 600px) {
@@ -85,6 +89,10 @@ a:link {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.thumb-with-text {
+  overflow-y: scroll;
 }
 
 .thumb-with-text * {
